API additions, containerWeights, HAM dataset
