# cineast-api/src/main/java/org/vitrivr/cineast/api/messages/result/BooleanLookupResult.java
@@ -7,6 +7,7 @@ import org.vitrivr.cineast.api.messages.interfaces.Message;
 import org.vitrivr.cineast.api.messages.interfaces.MessageType;
 import org.vitrivr.cineast.core.data.tag.Tag;
 
+import java.util.ArrayList;
 import java.util.List;
 
 public class BooleanLookupResult implements Message {
@@ -22,20 +23,33 @@ public class BooleanLookupResult implements Message {
          */
         public final int numberofElements;
 
-        public final int componentID;
+        public final Integer componentID;
+
+        public final List<String> content;
         /**
          * Constructor for the TagsQueryResult object.
          *
          * @param queryId String representing the ID of the query to which this part of the result message.
-         * @param tags    List of Strings containing the tags that represent the result of the query.
+         * @param numberofElements    The number of elements to be returned to that Query term
          */
         @JsonCreator
-        public BooleanLookupResult(String queryId, int numberofElements, int componentID) {
+        public BooleanLookupResult(String queryId, int numberofElements, Integer componentID) {
             this.queryId = queryId;
             this.numberofElements= numberofElements;
             this.componentID = componentID;
+            this.content = new ArrayList<>();
         }
-        @Override
+
+        @JsonCreator
+        public BooleanLookupResult(String queryId, int numberofElements,  List<String> content) {
+            this.queryId = queryId;
+            this.numberofElements= numberofElements;
+            this.content = content;
+            this.componentID = null;
+        }
+
+
+    @Override
         public MessageType getMessageType() {
         return MessageType.QR_BOOL;
     }
